tests/functional2/lang/fromTOML-timestamps/eval-fail.err.exp
error:
       … while calling the 'fromTOML' builtin
         at /pwd/in.nix:1:1:
            1| builtins.fromTOML ''
             | ^
            2|   key = "value"

       error: while parsing TOML: Dates and times are not supported
